wip add profiles to switch imagePullPolicy

--- a/environments/charts/hello-world-timer-job/templates/job.yaml
+++ b/environments/charts/hello-world-timer-job/templates/job.yaml
@@ -8,4 +8,5 @@ spec:
       containers:
         - name: hello-world-timer
           image: hello-world-timer
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
       restartPolicy: Never
